@@ -1,3 +1,9 @@
+2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 
+
+	* Banter/Person.cs: Added the PresenceUpdated event.  Connected up
+	  PresenceUpdated events from ProviderUser.
+	* Banter/PersonCard.cs: Hooked up the PresenceUpdated event on a person
+
 2007-05-11  Brady Anderson <banderso@novell.com> 
 
 	* Banter/ConversationManager.cs: removed tapioca contact comparisons 
